using css to specify image size via img element. 	modified:   src/jsboard.js 	modified:   tests/default.css 	modified:   tests/movelistparsing.html

--- a/tests/default.css
+++ b/tests/default.css
@@ -1,5 +1,7 @@
 
 
+.jsboard {
+}
 
 .movelist-odd-row {
   background: #e8edff;
@@ -18,4 +20,11 @@
   color: red;
   background: #eff2ff;
 }
+
+
+.jsboard-image {
+  width: 400;
+  height: 300;
+}
+
 
